# innowise_laboratory

./: .gitignore  main.py  pyproject.toml  requirements.txt
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: lecture_4.session.sql  query.sql  school.db
lecture_5/book_api/: database.py  main.py  models.py  schemas.py
lecture_5/book_api/routers/: books.py
lecture_6/: Dockerfile  main.py  requirements.txt
