[project]
name = "my-project"
version = "0.1.0"
description = "test project"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "no"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
